--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --ignore \".data\" server.js"
+    "start": "nodemon --ignore \"./data\" server.js"
   },
   "author": "Andrei Yakerson",
   "license": "ISC",
