--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
+    "dev": "set PORT=3000&nodemon --ignore \"./data\" server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --ignore \"./data\" server.js"
+    "start": "node server.js"
   },
   "author": "Andrei Yakerson",
   "license": "ISC",
